[project]
name = "nova-jax"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon McIntosh",email = "simon.mcintosh@iter.org"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "jax[cpu] (>=0.4.31,<0.5.0)",
    "numpy (>=2.0.1,<3.0.0)",
    "xarray (>=2024.7.0,<2025.0.0)",
    "h5netcdf (>=1.3.0,<2.0.0)",
    "numba (>=0.60.0,<0.61.0)"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
spyder = "^5.5.5"
matplotlib = "^3.9.0"
pyqt5-qt5 = "<=5.15.10"
pyqtwebengine-qt5 = "<=5.15.10"

